fix: letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -663,7 +663,7 @@ gap: 40px;
     color: #FFF;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.02;
+    letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
 
